tests/rosetta/transpiler/Clojure/accumulator-factory.error
run error: exit status 1
Execution error (ArityException) at main/main (accumulator-factory.clj:16).
Wrong number of args (1) passed to: main/add

Full report at:
/tmp/clojure-2999301266349862035.edn
